<resources>
    <string name="app_name">マイシフト表</string>

    <string name="all_day">終日</string>
    <string name="cancel">キャンセル</string>
    <string name="begin">開始</string>
    <string name="description">説明</string>
    <string name="end">終了</string>
    <string name="place">場所</string>
    <string name="preferences">設定</string>
    <string name="save">保存</string>
    <string name="template">テンプレート</string>
    <string name="title">タイトル</string>
    <string name="wave">～</string>
</resources>
