<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="net.komunan.myshiftcalendar.database.entity.Template" />
        <variable name="template" type="Template" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_default">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.beardedhen.androidbootstrap.BootstrapCircleThumbnail
                        android:id="@+id/icon"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        />
                    <com.beardedhen.androidbootstrap.BootstrapLabel
                        android:id="@+id/title_label"
                        android:text="@string/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_default"
                        app:layout_constraintTop_toBottomOf="@id/icon"
                        app:bootstrapBrand="info"
                        app:roundedCorners="true"
                        />
                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/title"
                        android:text="@={template.title}"
                        android:inputType="text"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        app:layout_constraintTop_toBottomOf="@id/title_label"
                        app:roundedCorners="true"
                        />
                    <com.beardedhen.androidbootstrap.BootstrapLabel
                        android:id="@+id/begin_label"
                        android:text="@string/begin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_default"
                        app:layout_constraintTop_toBottomOf="@id/title"
                        app:layout_constraintLeft_toLeftOf="@+id/begin"
                        app:bootstrapBrand="info"
                        app:roundedCorners="true"
                        />
                    <com.beardedhen.androidbootstrap.BootstrapLabel
                        android:id="@+id/end_label"
                        android:text="@string/end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_default"
                        app:layout_constraintBaseline_toBaselineOf="@id/begin_label"
                        app:layout_constraintLeft_toLeftOf="@+id/end"
                        app:bootstrapBrand="info"
                        app:roundedCorners="true"
                        />
                    <TextView
                        android:id="@+id/begin"
                        android:text="@{template.startTimeText}"
                        android:gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_small"
                        app:layout_constraintTop_toBottomOf="@id/begin_label"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/time_separator"
                        />
                    <TextView
                        android:id="@+id/time_separator"
                        android:text="@string/wave"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_default"
                        android:layout_marginEnd="@dimen/margin_default"
                        app:layout_constraintBaseline_toBaselineOf="@id/begin"
                        app:layout_constraintLeft_toRightOf="@id/begin"
                        app:layout_constraintRight_toLeftOf="@+id/end"
                        />
                    <TextView
                        android:id="@+id/end"
                        android:text="@{template.endTimeText}"
                        android:gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBaseline_toBaselineOf="@id/begin"
                        app:layout_constraintLeft_toRightOf="@id/time_separator"
                        app:layout_constraintRight_toLeftOf="@+id/button_all_day"
                        />
                    <com.beardedhen.androidbootstrap.BootstrapButton
                        android:id="@+id/button_all_day"
                        android:text="@string/all_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_default"
                        app:layout_constraintBaseline_toBaselineOf="@id/begin"
                        app:layout_constraintRight_toRightOf="parent"
                        app:bootstrapBrand="danger"
                        app:bootstrapSize="md"
                        app:buttonMode="toggle"
                        app:roundedCorners="true"
                        />
                    <com.beardedhen.androidbootstrap.BootstrapLabel
                        android:id="@+id/place_label"
                        android:text="@string/place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_default"
                        app:layout_constraintTop_toBottomOf="@id/begin"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:bootstrapBrand="info"
                        app:roundedCorners="true"
                        />
                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/place"
                        android:text="@={template.place}"
                        android:inputType="text"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_default"
                        app:layout_constraintTop_toBottomOf="@id/place_label"
                        app:roundedCorners="true"
                        />
                    <com.beardedhen.androidbootstrap.BootstrapLabel
                        android:id="@+id/description_label"
                        android:text="@string/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_default"
                        app:layout_constraintTop_toBottomOf="@id/place"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:bootstrapBrand="info"
                        app:roundedCorners="true"
                        />
                    <com.beardedhen.androidbootstrap.BootstrapEditText
                        android:id="@+id/description"
                        android:text="@={template.description}"
                        android:inputType="textMultiLine"
                        android:minLines="3"
                        android:maxLines="3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_default"
                        app:layout_constraintTop_toBottomOf="@id/description_label"
                        app:roundedCorners="true"
                        />
                </android.support.constraint.ConstraintLayout>
        </ScrollView>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default">
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/button_cancel"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:bootstrapBrand="warning"
                app:bootstrapSize="md"
                app:buttonMode="regular"
                app:showOutline="true"
                app:roundedCorners="true"
                />
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/button_save"
                android:text="@string/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_default"
                app:bootstrapBrand="success"
                app:bootstrapSize="md"
                app:buttonMode="regular"
                app:showOutline="false"
                app:roundedCorners="true"
                />
        </LinearLayout>
    </LinearLayout>
</layout>
